# BoostPythonSimple

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  test.py  wrapper.cpp
